// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`about active 1`] = `
<Menu
  borderless={true}
  fixed="top"
  fluid={true}
  inverted={true}
  size="large"
  style={
    Object {
      "backgroundColor": "#20232a",
    }
  }
>
  <MenuItem
    as="a"
    header={true}
    href="/#top"
    style={
      Object {
        "padding": 0,
        "width": 300,
      }
    }
  >
    <Image
      alt="logo"
      as="img"
      src="logo.svg"
      style={
        Object {
          "backgroundColor": "#20232a",
          "borderRadius": 4,
          "height": 48,
          "margin": 5,
        }
      }
      ui={true}
    />
    Smart Contract Programmer
  </MenuItem>
  <MenuMenu
    position="right"
  >
    <MenuItem
      active={false}
      as="a"
      href="/#courses"
    >
      Courses
    </MenuItem>
    <MenuItem
      active={true}
      as="a"
      href="/#about"
    >
      About
    </MenuItem>
    <MenuItem
      active={false}
      as="a"
      href="/#contact"
    >
      Contact
    </MenuItem>
  </MenuMenu>
</Menu>
`;

exports[`contact active 1`] = `
<Menu
  borderless={true}
  fixed="top"
  fluid={true}
  inverted={true}
  size="large"
  style={
    Object {
      "backgroundColor": "#20232a",
    }
  }
>
  <MenuItem
    as="a"
    header={true}
    href="/#top"
    style={
      Object {
        "padding": 0,
        "width": 300,
      }
    }
  >
    <Image
      alt="logo"
      as="img"
      src="logo.svg"
      style={
        Object {
          "backgroundColor": "#20232a",
          "borderRadius": 4,
          "height": 48,
          "margin": 5,
        }
      }
      ui={true}
    />
    Smart Contract Programmer
  </MenuItem>
  <MenuMenu
    position="right"
  >
    <MenuItem
      active={false}
      as="a"
      href="/#courses"
    >
      Courses
    </MenuItem>
    <MenuItem
      active={false}
      as="a"
      href="/#about"
    >
      About
    </MenuItem>
    <MenuItem
      active={true}
      as="a"
      href="/#contact"
    >
      Contact
    </MenuItem>
  </MenuMenu>
</Menu>
`;

exports[`courses active 1`] = `
<Menu
  borderless={true}
  fixed="top"
  fluid={true}
  inverted={true}
  size="large"
  style={
    Object {
      "backgroundColor": "#20232a",
    }
  }
>
  <MenuItem
    as="a"
    header={true}
    href="/#top"
    style={
      Object {
        "padding": 0,
        "width": 300,
      }
    }
  >
    <Image
      alt="logo"
      as="img"
      src="logo.svg"
      style={
        Object {
          "backgroundColor": "#20232a",
          "borderRadius": 4,
          "height": 48,
          "margin": 5,
        }
      }
      ui={true}
    />
    Smart Contract Programmer
  </MenuItem>
  <MenuMenu
    position="right"
  >
    <MenuItem
      active={true}
      as="a"
      href="/#courses"
    >
      Courses
    </MenuItem>
    <MenuItem
      active={false}
      as="a"
      href="/#about"
    >
      About
    </MenuItem>
    <MenuItem
      active={false}
      as="a"
      href="/#contact"
    >
      Contact
    </MenuItem>
  </MenuMenu>
</Menu>
`;

exports[`it renders 1`] = `
<Menu
  borderless={true}
  fixed="top"
  fluid={true}
  inverted={true}
  size="large"
  style={
    Object {
      "backgroundColor": "#20232a",
    }
  }
>
  <MenuItem
    as="a"
    header={true}
    href="/#top"
    style={
      Object {
        "padding": 0,
        "width": 300,
      }
    }
  >
    <Image
      alt="logo"
      as="img"
      src="logo.svg"
      style={
        Object {
          "backgroundColor": "#20232a",
          "borderRadius": 4,
          "height": 48,
          "margin": 5,
        }
      }
      ui={true}
    />
    Smart Contract Programmer
  </MenuItem>
  <MenuMenu
    position="right"
  >
    <MenuItem
      active={false}
      as="a"
      href="/#courses"
    >
      Courses
    </MenuItem>
    <MenuItem
      active={false}
      as="a"
      href="/#about"
    >
      About
    </MenuItem>
    <MenuItem
      active={false}
      as="a"
      href="/#contact"
    >
      Contact
    </MenuItem>
  </MenuMenu>
</Menu>
`;
